# cool

./: .gitignore  CMakeLists.txt  cool.dox  cool.dox.in
cmake/: gtest  platform
impl/include/entrails/: runner.h
impl/include/entrails/gcd/: runner.h
impl/include/entrails/winwtp/: runner.h
impl/include/impl/: async.h
impl/include/impl/gcd/: runner.h
impl/src/: async.cpp  named.cpp
impl/src/gcd/: runner.cpp
impl/src/winwtp/: runner.cpp
include/cool/: binary.h  cool.h  exception.h  gcd_async.h  gcd_task.h  ip_address.h  miscellaneous.h  vow.h
include/cool/entrails/: gcd_async.h  gcd_task.h  ip_address.h  platform.h  traits.h  vow.h
include/cool2/: async.h  named.h
include/cool2/async/: runner.h  task.h
include/cool2/async/impl/: runner.h  task.h
include/cool2/impl/: platform.h  traits.h
lib/: gcd_async.cpp  gcd_task.cpp  ip_address.cpp  miscellaneous.cpp  vow.cpp
test/: ip_test.cpp  main.cpp  perf_runner.cpp  test_2_runner.cpp  test_binary.cpp  test_compilation.cpp  test_on_exception.cpp  test_program.cpp  test_reader_writer.cpp  test_runner.cpp  test_vow.cpp
